--- a/client/app/dashboard/user/change-password/change-password.component.html
+++ b/client/app/dashboard/user/change-password/change-password.component.html
@@ -1,6 +1,6 @@
 <div class="clearfix pt2">
-    <div class="col col-3">&nbsp;</div>
-    <div class="col col-6">
+    <div class="md-col lg-col lg-col-3 md-col-2">&nbsp;</div>
+    <div class="md-col lg-col lg-col-6 md-col-8">
         <mat-card class="m4 indigo-background-color">
             <div class="width-100 logo-container">
                 <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
@@ -14,9 +14,9 @@
                 </div>
             </mat-card-header>
             <mat-card-content>
-                <mat-form-field class="white-input width-100 mt2">
-                    <input [formControl]="oldPasswordControl" matInput type="password" placeholder="Old Password" [(ngModel)]="user.oldPassword">
-                    <mat-error class="with-icon white-text-color" *ngIf="!user.oldPassword">
+                <mat-form-field class="white-input width-100 mt2" *ngIf="!user.getSocial()">
+                    <input [formControl]="oldPasswordControl" matInput type="password" placeholder="Old Password">
+                    <mat-error class="with-icon white-text-color" *ngIf="oldPasswordControl.getError('required')">
                         <div class="mr02">
                             <mat-icon>error_outline</mat-icon>
                         </div>
@@ -27,8 +27,8 @@
                 </mat-form-field>
 
                 <mat-form-field class="white-input width-100 mt2">
-                    <input [formControl]="newPasswordControl" matInput type="password" placeholder="New Password" [(ngModel)]="user.newPassword">
-                    <mat-error class="with-icon white-text-color" *ngIf="!user.newPassword">
+                    <input [formControl]="newPasswordControl" matInput type="password" placeholder="New Password">
+                    <mat-error class="with-icon white-text-color" *ngIf="newPasswordControl.getError('required')">
                         <div class="mr02">
                             <mat-icon>error_outline</mat-icon>
                         </div>
@@ -39,11 +39,27 @@
                 </mat-form-field>
 
                 <mat-form-field class="white-input width-100 mt2">
-                    <input matInput type="password" placeholder="Confirm New Password" [(ngModel)]="user.confirmNewPassword">
+                    <input [formControl]="newConfirmPasswordControl" matInput type="password" placeholder="Confirm New Password">
+                    <mat-error class="with-icon white-text-color" *ngIf="newConfirmPasswordControl.getError('required')">
+                        <div class="mr02">
+                            <mat-icon>error_outline</mat-icon>
+                        </div>
+                        <div>
+                            Confirm Password cannot be empty
+                        </div>
+                    </mat-error>
+                    <mat-error class="with-icon white-text-color" *ngIf="!newConfirmPasswordControl.getError('required') && newConfirmPasswordControl.getError('doesNotMatch')">
+                        <div class="mr02">
+                            <mat-icon>error_outline</mat-icon>
+                        </div>
+                        <div>
+                            Confirm Password and New Password must match
+                        </div>
+                    </mat-error>
                 </mat-form-field>
         
                 <div class="clearfix mt3">
-                    <div class="col col-12 p1">
+                    <div class="lg-col lg-col-12 p1">
                         <button class="width-100" mat-raised-button (click)="changePassword()">Change Password</button>
                     </div>
                 </div>
