--- a/client/app/dashboard/user/user.component.html
+++ b/client/app/dashboard/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="clearfix pt2">
-    <div class="col col-3">&nbsp;</div>
-    <div class="col col-6">
+    <div class="md-col lg-col lg-col-3 md-col-2">&nbsp;</div>
+    <div class="md-col lg-col lg-col-6 md-col-8">
         <mat-card class="m4 indigo-background-color">
             <div class="width-100 logo-container">
                 <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
@@ -24,7 +24,7 @@
                     </div>
 
                     <div>
-                        <img [src]="user.profilePictureUrl" alt="profile picture" class="avatar-100">
+                        <img [src]="profilePictureUrl" alt="profile picture" class="avatar-100">
                     </div>
                 </div>
 
@@ -34,34 +34,60 @@
                 </div>
 
                 <mat-form-field class="white-input width-100 mt1">
-                    <input [formControl]="usernameControl" matInput placeholder="Username" [(ngModel)]="user.username">
-                    <mat-error class="with-icon white-text-color" *ngIf="!user.username">
+                    <input [formControl]="usernameControl" matInput placeholder="Username">
+                    <mat-error class="with-icon white-text-color" *ngIf="usernameControl.getError('required')">
                         <div class="mr02">
                             <mat-icon>error_outline</mat-icon>
                         </div>
                         <div>
-                            New Username cannot be empty
+                            Username cannot be empty
                         </div>
                     </mat-error>
+                    <mat-error class="with-icon white-text-color" *ngIf="usernameControl.getError('usernameAlreadyRegistered')">
+                        <div class="mr02">
+                            <mat-icon>error_outline</mat-icon>
+                        </div>
+                        <div>
+                            An account with this Username already exists
+                        </div>
+                    </mat-error>
+                    <mat-spinner *ngIf="usernameControl.pending" [diameter]="20"></mat-spinner>
                 </mat-form-field>
 
                 <mat-form-field class="white-input width-100 mt1">
-                    <input [formControl]="emailControl" matInput type="email" placeholder="Email" [(ngModel)]="user.email">
-                    <mat-error class="with-icon white-text-color" *ngIf="!user.email">
+                    <input [formControl]="emailControl" matInput placeholder="Email">
+                    <mat-error class="with-icon white-text-color" *ngIf="emailControl.getError('required')">
                         <div class="mr02">
                             <mat-icon>error_outline</mat-icon>
                         </div>
                         <div>
-                            New Email cannot be empty
+                            Email cannot be empty
                         </div>
                     </mat-error>
+                    <mat-error class="with-icon white-text-color" *ngIf="!emailControl.getError('required') && emailControl.getError('email')">
+                        <div class="mr02">
+                            <mat-icon>error_outline</mat-icon>
+                        </div>
+                        <div>
+                            Please enter a valid Email Address
+                        </div>
+                    </mat-error>
+                    <mat-error class="with-icon white-text-color" *ngIf="emailControl.getError('emailAlreadyRegistered')">
+                        <div class="mr02">
+                            <mat-icon>error_outline</mat-icon>
+                        </div>
+                        <div>
+                            An account with this Email Address already exists.
+                        </div>
+                    </mat-error>
+                    <mat-spinner *ngIf="emailControl.pending" [diameter]="20"></mat-spinner>
                 </mat-form-field>
                 
                 <div class="clearfix mt3">
-                    <div class="col col-6 px3">
-                        <button class="width-100" mat-raised-button (click)="saveChanges()">Save Changes</button>
+                    <div class="md-col lg-col md-col-12 lg-col-6 px3">
+                        <button [disabled]="emailControl.pending || usernameControl.pending" class="width-100" mat-raised-button (click)="saveChanges()">Save Changes</button>
                     </div>
-                    <div class="col col-6 px3">
+                    <div class="md-col lg-col md-col-12 lg-col-6 px3">
                         <button class="width-100" routerLink="/dashboard/change-password" mat-raised-button>Change Password</button>
                     </div>
                 </div>
