--- a/client/app/dashboard/main/modals/delete/delete.component.html
+++ b/client/app/dashboard/main/modals/delete/delete.component.html
@@ -6,11 +6,11 @@
 </div>
 <div mat-dialog-actions>
     <div class="clearfix width-100">
-        <div class="col col-6">
+        <div class="lg-col lg-col-6">
             <button class="mr2 width-100" mat-button (click)="onCancel()">Cancel</button>        
         </div>
 
-        <div class="col col-6">
+        <div class="lg-col lg-col-6">
             <button class="width-100 delete-button" cdkFocusInitial mat-button [mat-dialog-close]="true">Delete</button>
         </div>
     </div>
