--- a/client/app/dashboard/main/modals/update/update.component.html
+++ b/client/app/dashboard/main/modals/update/update.component.html
@@ -22,11 +22,11 @@
 </div>
 <div mat-dialog-actions>
     <div class="clearfix width-100">
-        <div class="col col-6">
+        <div class="lg-col lg-col-6">
             <button class="mr2 width-100" mat-button (click)="onCancel()">Cancel</button>        
         </div>
 
-        <div class="col col-6">
+        <div class="lg-col lg-col-6">
             <button class="width-100" mat-button [disabled]="!item.value" [mat-dialog-close]="item.value" color="primary">Update</button>
         </div>
     </div>
