--- a/client/app/login/login.component.html
+++ b/client/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="clearfix pt1">
-    <div class="col col-3">&nbsp;</div>
-    <div class="col col-6">
+    <div class="lg-col lg-col-3 md-col-1">&nbsp;</div>
+    <div class="lg-col lg-col-6 md-col-10">
         <mat-card class="m4 indigo-background-color">
             <div class="width-100 logo-container">
                 <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
@@ -15,20 +15,28 @@
             </mat-card-header>
             <mat-card-content>
                 <mat-form-field class="white-input mt1 width-100">
-                    <input matInput [formControl]="emailControl" placeholder="Username" [(ngModel)]="user.email">
-                    <mat-error class="with-icon white-text-color" *ngIf="!user.email">
+                    <input matInput [formControl]="emailControl" placeholder="Email">
+                    <mat-error class="with-icon white-text-color" *ngIf="emailControl.getError('required')">
                         <div class="mr02">
                             <mat-icon>error_outline</mat-icon>
                         </div>
                         <div>
-                            Username cannot be empty
+                            Email cannot be empty
+                        </div>
+                    </mat-error>
+                    <mat-error class="with-icon white-text-color" *ngIf="!emailControl.getError('required') && emailControl.getError('email')">
+                        <div class="mr02">
+                            <mat-icon>error_outline</mat-icon>
+                        </div>
+                        <div>
+                            Please enter a valid Email Address
                         </div>
                     </mat-error>
                 </mat-form-field>
                 
-                <mat-form-field class="white-input mt1 width-100" hintLabel="{{passwordError}}">
-                    <input matInput [formControl]="passwordControl" placeholder="Password" type="password" [(ngModel)]="user.password">
-                    <mat-error class="with-icon white-text-color" *ngIf="!user.password">
+                <mat-form-field class="white-input mt1 width-100">
+                    <input matInput [formControl]="passwordControl" placeholder="Password" type="password">
+                    <mat-error class="with-icon white-text-color" *ngIf="passwordControl.getError('required')">
                         <div class="mr02">
                             <mat-icon>error_outline</mat-icon>
                         </div>
@@ -41,22 +49,22 @@
                 <mat-slide-toggle [(ngModel)]="rememberMe" class="white-toggle-switch mt1">Remember Me</mat-slide-toggle>
                 
                 <div class="clearfix mt3">
-                    <div class="col col-6 px3">
+                    <div class="lg-col lg-col-6 px3">
                         <button class="width-100" mat-raised-button (click)="login()">Login</button>
                     </div>
-                    <div class="col col-6 px3">
+                    <div class="lg-col lg-col-6 px3">
                         <button class="width-100" routerLink="/register" mat-raised-button fxFlex>Register</button>
                     </div>
                 </div>
 
                 <div class="clearfix mt3">
-                    <div class="col col-12 px3 pb2">
+                    <div class="lg-col lg-col-12 px3 pb2">
                         <button mat-raised-button class="width-100 google-login" (click)="socialSignIn('google')">
                             <i class="fa fa-google"></i>
                             Login with Google
                         </button>
                     </div>
-                    <div class="col col-12 px3">
+                    <div class="lg-col lg-col-12 px3">
                         <button mat-raised-button class="width-100 facebook-login" (click)="socialSignIn('facebook')">
                             <i class="fa fa-facebook" style="float: left"></i>
                             Login with Facebook
