--- a/client/app/dashboard/user/change-password/change-password.component.html
+++ b/client/app/dashboard/user/change-password/change-password.component.html
@@ -14,50 +14,10 @@
                 </div>
             </mat-card-header>
             <mat-card-content>
-                <mat-form-field class="white-input width-100 mt2" *ngIf="!user.getSocial()">
-                    <input [formControl]="oldPasswordControl" matInput type="password" placeholder="Old Password">
-                    <mat-error class="with-icon white-text-color" *ngIf="oldPasswordControl.getError('required')">
-                        <div class="mr02">
-                            <mat-icon>error_outline</mat-icon>
-                        </div>
-                        <div>
-                            Old Password cannot be empty
-                        </div>
-                    </mat-error>
-                </mat-form-field>
+                    <password-field [inputControl]="oldPasswordControl" [title]="'Old Password'"></password-field>
+                    <password-field [inputControl]="newPasswordControl" [title]="'New Password'"></password-field>
+                    <password-field [inputControl]="newConfirmPasswordControl" [matchValue]="newPasswordControl.value" [title]="'Confirm New Password'"></password-field>
 
-                <mat-form-field class="white-input width-100 mt2">
-                    <input [formControl]="newPasswordControl" matInput type="password" placeholder="New Password">
-                    <mat-error class="with-icon white-text-color" *ngIf="newPasswordControl.getError('required')">
-                        <div class="mr02">
-                            <mat-icon>error_outline</mat-icon>
-                        </div>
-                        <div>
-                            New Password cannot be empty
-                        </div>
-                    </mat-error>
-                </mat-form-field>
-
-                <mat-form-field class="white-input width-100 mt2">
-                    <input [formControl]="newConfirmPasswordControl" matInput type="password" placeholder="Confirm New Password">
-                    <mat-error class="with-icon white-text-color" *ngIf="newConfirmPasswordControl.getError('required')">
-                        <div class="mr02">
-                            <mat-icon>error_outline</mat-icon>
-                        </div>
-                        <div>
-                            Confirm Password cannot be empty
-                        </div>
-                    </mat-error>
-                    <mat-error class="with-icon white-text-color" *ngIf="!newConfirmPasswordControl.getError('required') && newConfirmPasswordControl.getError('doesNotMatch')">
-                        <div class="mr02">
-                            <mat-icon>error_outline</mat-icon>
-                        </div>
-                        <div>
-                            Confirm Password and New Password must match
-                        </div>
-                    </mat-error>
-                </mat-form-field>
-        
                 <div class="clearfix mt3">
                     <div class="lg-col lg-col-12 p1">
                         <button class="width-100" mat-raised-button (click)="changePassword()">Change Password</button>
