removed extra margin which causes browser to show scroll bar

--- a/client/app/dashboard/user/user.component.html
+++ b/client/app/dashboard/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="clearfix pt2">
     <div class="md-col lg-col lg-col-3 md-col-2">&nbsp;</div>
     <div class="md-col lg-col lg-col-6 md-col-8">
-        <mat-card class="m4 indigo-background-color">
+        <mat-card class="m4 indigo-background-color" style="margin-bottom: 1em;">
             <div class="width-100 logo-container">
                 <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
             </div>
